@@ -4,6 +4,8 @@ Revision history for Perl module Perl::MinimumVersion
     - 'state' requires perl 5.10.0, even if you don't also see
       "use feature 'state'", because you can also write "use 5.010" to
       enable 'state'. RT#67626
+    - Dropped the rule that said "use base 'Exporter'" should make a
+      dependency on Perl 5.008+ RT#89173
     - Improved the fix for RT#95023. Thanks again to Paul Howarth.
 
 1.34 2014-04-24
